# db-migration-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
db_migration_kit/: __init__.py  bootstrap.py  cli.py  config.py  inspector.py  loader.py  project.py  runner.py  scaffold.py  schema.py  snapshots.py
db_migration_kit/providers/: __init__.py  base.py  registry.py  sqlalchemy_base.py  sqlalchemy_postgres.py  sqlalchemy_sqlite.py
db_migration_kit/sources/: __init__.py  base.py  metadata.py  persistence_kit_registry.py
tests/: test_inspector.py  test_runner.py  test_scaffold.py
